2000-12-13  Per Bothner  <per@bothner.com>

	* kawa/standard/map.java (inline):  Inline map as well as for-each.

	* kawa/standard/quasiquote.java (expand_pair):  Call LList.make
	rather than kawa.lib.lists.cons.
	(consType):  Removed static field.

	* kawa/standard/Scheme.java (initScheme):  Add "reverse!".
	The reverse function is now in kawa.lib.lists.
	* kawa/standard/reverse.java:  Removed.
	* kawa/standard/Makefile.am (java_JAVA):  Removed reverse.java.


2000-12-13  Emmanuel Castro <castro@lirmm.fr>

	* kawa/standard/Scheme.java (initScheme):  'error' is now in
	kawa.lib.misc, not kawa.lib.syntax.

2000-12-13  Per Bothner  <per@bothner.com>

	* kawa/standard/map.java (inline):  Swap order of then-clause and
	else-clause in generated code.  Fixes bug 'for-each does not compile
	in CVS tree' reported by Emmanuel Castro <castro@lirmm.fr>.

2000-12-11  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (map, forEach):  New fields.
	(<init>):  Initialize map and forEach fields.
	(initScheme):  Defie map, for-each using define_field.
	* kawa/standard/map.java:  Implement CanInline.
	(inline):  New methods, to implement CanInline.
	
2000-12-09  Per Bothner  <per@bothner.com>

	Patch from Matthias Radestock <matthias@lshift.net>:
	* kawa/lang/AutoloadProcedure.java (env):  New field.
	(<init>):  Extra Environment argument.
	(load):  Use env field instead of current Environment.
	* kawa/lang/AutoloadSyntax.java:  Likewise.
	* kawa/standard/define_autoload.java:  Pass Translator's global
	environment to AutoloadProcedure and AutoloadSyntax constructors.
	* kawa/standard/Scheme.java (define_proc, define_syntax):  Pass
	current environ to AutoloadProcedure and AutoloadSyntax constructors.

2000-12-02  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (getExpander):  New method.
	* kawa/lang/Translator.java (addGlobal):  Removed method.
	(getBinding):  Lookup using hygiene-resolved name.
	(pushBinding):  Do nothing if new value is name as old.
	