@@ -1,3 +1,10 @@
+A new gnu.kawa.xml package (whose name is likey to change) contains
+XML-related code, currently an XML parser and printer.
+The new class gnu.kawa.util.TreeList (alias <document>) is useful
+for compactly representing nested structures, including XML documents.
+If you (require 'xml) you will get Scheme interfaces (print-as-xml
+and parse-xml-from-url) to these classes.
+
 The map and for-each procedure is now inlined.  This is most especially
 beneficial when it allows the mapped-over procedure to also be inlined,
 such as when that procedure is a lambda expression.
